<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/bleu"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/TitleTheme"
                android:text="@string/home_title" />
            
             <Button
                android:id="@+id/buttonConnexion"
                style="@style/ButtonTheme"
                android:text="@string/connexion" />
             
             <Button 
                 android:id="@+id/buttonTutoriel"
                 style="@style/ButtonTheme"
                 android:text="@string/tutoriel" />
                 "

            <Button
                android:id="@+id/buttonJouer"
                style="@style/ButtonTheme"
                android:text="@string/jouer"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/buttonScores"
                style="@style/ButtonTheme"
                android:text="@string/scores" />

           
        </LinearLayout>

    </ScrollView>

</LinearLayout>